# CMG_MoP_Tool

./: .gitignore  main.py  pyproject.toml
aa_charging_group/: aa_charging_group.py
action_rule_unit/: action_rule_unit.py
app_filter/: app_filter.py
application/: application.py
bandwidth_policer/: bandwidth_policer.py
charging/: charging_rule_unit.py
cisco_claro_ar/: cisco_claro_ar.py
cups/: cups.py
dns_ip_cache/: dns_ip_cache.py
header_enrichment/: header_enrichment.py
parsers/: cisco_parser.py  fng_parser.py  tmo_cisco_parser.py
policy_rule/: policy_rule.py
prefix_list/: prefix_list.py
redirect/: http_redirect.py
server_port/: server_port.py
spi/: dns.py  ip_address_list.py  policy_rule.py  port.py
templates/: addr_list_commands.yaml  app_filter.yaml  application_commands.yaml  charging_rule_unit_commands.yaml  dns_ip_cache_commands.yaml  dns_sniffing_spi.yaml  http_enrich.yaml  http_redirect.yaml  lenghts_constraints.yaml  policers.yaml  policy_rule_commands.yaml  port_list_commands.yaml  prefix_list_commands.yaml  spi_port_list.yaml  spi_pru_commands.yaml  sru.yaml  sru_list.yaml
tree_parser/: treeparser.py
utils/: cflowd.py  check_name_lenghts.py  header_fields_convertion.py  merge_nat_flows.py  parse_aa_flows.py  rule_convertion.py  rule_filter_dict.py  utils.py  yaml.py
