[tool.poetry]
name = "CMGServiceAwarenessTool"
version = "0.1.0"
description = ""
authors = ["Leonardo Monteiro <decastromonteiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
